# openbraid

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
decisions/: 2026-05-10-tool-discovery-quirk-not-reproducible.md
memos/inbox/: 2026-05-08-1700--openbraid-director--openbraid-engineer--v0-kickoff-start-with-schema.openthing  2026-05-08-1730--openbraid-engineer--openbraid-engineer--v0-handoff-after-schema-pr.body.md  (+25 more)
migrations/: 0001_initial.sql  0002_rename_auth_user_id.sql  0003_notes.sql  0004_orgs.sql  0005_org_location.sql  0006_org_artifacts.sql  0007_job_artifacts.sql  0008_drop_job_artifacts.sql  0009_incumbents.sql  0010_canonical_role_names.sql  0011_roles_org_id_nullable.sql  0012_org_artifact_edits.sql
org/: openbraid-org-organization.opencatalog  openbraid-org.openthing
proposals/: 2026-05-10-v1-roadmap-sequencing-addendum.md  2026-05-10-v1-roadmap-sequencing.md
server/: README.md  __init__.py  auth.py  boot_url.py  canonical_json.py  chart_builder.py  db.py  main.py  master_state.py  panel.py  rest_api.py  roledef_resolver.py  tool_impls.py
tests/: conftest.py  test_artifact_boot.py  test_artifact_claim.py  test_chart_builder.py  test_edit_tools.py  test_ensure_account.py  test_ensure_personal_org.py  test_export_roundtrip.py  test_master_state.py  test_memos_to_file.py  test_panel_smoke.py  test_position_tree.py  test_position_url.py  test_rest_api.py  test_roledef_resolver.py  test_tool_contracts.py  test_transports_share_impls.py  test_upload_job.py  test_upload_org.py
(+35 files in other folders)
