[project]
name = "openbraid-server"
version = "0.0.1"
description = "openbraid hosted MCP service — persistent memo store for stateless AI sessions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "supabase>=2.0",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["server*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []
